﻿V6.5: (under development)
  * Enhancement #662: Background image now supports transparency
  * Fixed #289: HintMode hmHintAndDefault: Default Hint does not change to node specific hint when the mouse is moved to a node.

V6.4.1: (26 Oct 2016)
  * Fixed #549: Drawing issue with toCheckSupport an toExtendedFocus
  * Fixed #663: Exception pressing return on an edited item with no columns)
  * Fixed #661: Minimal Demo 2 different problems, can't select on start up, multiple clicks causes error
  * Fixed problem with wrongly drawn checkbox in column headers.
  * VirtualTreePerItemAction now initializes all nodes before it works with them and changes e.g. the check state.
  * TBaseVirtualTree.DoGetImageIndex() now always tries to assign a default image list as result, even if OnGetImage and OnGetImageEx are not assigned. So derived controls do not need to make this step.

V6.4: (28 Sep 2016)
  * Fixed #622: [BREAKING CHANGE] Removed all 16x16 fixed sized checkbox-imagelists. 
    The property CheckImageKind supports the values ckSystemDefault and ckCustom only and should be considered deprecated.
  * Fixed #640: Edit control for in-place editing wrongly scaled in high-dpi scenarios
  * Fixed #627: It should be possible to use OnGetImageIndexEx without having imagelists assigned
  * Added assertion that verifies if an imageindex is supplied but no valid imagelist is available for this imageindex
  * Fixed #148: Background Images now support other formats than just bitmaps.
  * Fixed #623: GetHint calculates wrong width for HintText   
  * Fixed #633: High dpi scaling was performed two times    
  * Fixed #544, #427: Header painting problem with BiDiMode right to left
  * TBaseVirtualTree.EnsureNodeSelected() only scrolls the selected node into the view, if no one was previously selected.    
  * Fixed #248: VT Header draws smudged
  * Fixed #643: VT Header dropmark appears even if dragged column won't change position